chore: update theme.less

--- a/src/theme.less
+++ b/src/theme.less
@@ -7,3 +7,7 @@
 // View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less
 
 // @primary-color: #1890ff;
+@header-color:fade(@black,85%);
+@header-height: 64px;
+@menu-item-border:2px;
+@site-heading-color:@header-color;
