--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,21 +1,12 @@
-<ul class="header" nz-row nz-menu nzMode="horizontal">
 
-  <li nz-menu-item nzMatchRouter [routerLink]="['/homepage']" routerLinkActive="router-link-active">
-    <i nz-icon nzType="home"></i>
-    首页
-  </li>
-  <li nz-menu-item nzMatchRouter [routerLink]="['/tools']" routerLinkActive="router-link-active">
-    <i nz-icon nzType="tool"></i>
-    在线工具
-  </li>
-  <li nz-menu-item>
-    <i nz-icon nzType="setting"></i>
-    待定
-  </li>
-
-  <li nz-menu-item>
-    <i nz-icon nzType="github"></i>
-    GitHub
-    <a href="https://github.com/webkcom" target="_blank" rel="noopener noreferrer"></a>
-  </li>
-</ul>
+<header id="header">
+  <div nz-row style="flex-flow: nowrap">
+    <div nz-col [nzXs]="24" [nzSm]="24" [nzMd]="6" [nzLg]="6" [nzXl]="5" [nzXXl]="4">
+      <app-logo></app-logo>
+    </div>
+    <div nz-col [nzXs]="0" [nzSm]="0" [nzMd]="18" [nzLg]="18" [nzXl]="19" [nzXXl]="20" class="menu-row">
+      <ul id="nav" nz-row nzMode="horizontal" nz-menu app-navigation [nzSelectable]="false">
+      </ul>
+    </div>
+  </div>
+</header>
