--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,12 @@
-<header class="header">
-  <div nz-row>
-    <app-logo></app-logo>
-    <app-searchbar></app-searchbar>
-    <app-navigation></app-navigation>
+
+<header id="header">
+  <div nz-row style="flex-flow: nowrap">
+    <div nz-col [nzXs]="24" [nzSm]="24" [nzMd]="6" [nzLg]="6" [nzXl]="5" [nzXXl]="4">
+      <app-logo></app-logo>
+    </div>
+    <div nz-col [nzXs]="0" [nzSm]="0" [nzMd]="18" [nzLg]="18" [nzXl]="19" [nzXXl]="20" class="menu-row">
+      <ul id="nav" nz-row nzMode="horizontal" nz-menu app-navigation [nzSelectable]="false">
+      </ul>
+    </div>
   </div>
 </header>
