refactor: modify component paths

--- a/src/app/routes/tools/passwdgen/passwdgen.component.html
+++ b/src/app/routes/tools/passwdgen/passwdgen.component.html
@@ -1,6 +1,6 @@
 <div nz-row>
     <li nz-col nzSpan="6"></li>
-    <nz-card nz-col nzSpan="12">
+    <nz-card nz-col nzSpan="12" nzHoverable>
         <p class="description">一个在线的密码生成器</p>
 
         <h1><strong>{{value}}</strong></h1>
