--- a/src/app/routes/tools/ipdetector/ipdetector.component.html
+++ b/src/app/routes/tools/ipdetector/ipdetector.component.html
@@ -1,6 +1,6 @@
 <div nz-row>
     <li nz-col nzSpan="6"></li>
-    <nz-card nz-col nzSpan="12">
+    <nz-card nz-col nzSpan="12" nzHoverable>
         <h1><strong>本机当前外部IP地址及归属地</strong></h1>
         <h2><strong>外部IP：{{ip}}</strong></h2>
         <h2><strong>所在国家：{{country}}</strong></h2>
