feat: add the "scrWidth" variable to  adjust menu display content based on the window width

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,13 @@
 <header class="header">
   <div nz-row>
-    <app-logo></app-logo>
-    <app-searchbar></app-searchbar>
-    <app-navigation></app-navigation>
-  </div>
+    
+      <app-logo></app-logo>
+
+
+      <app-searchbar [scrWidth]="scrWidth"></app-searchbar>
+ 
+
+      <app-navigation [scrWidth]="scrWidth"></app-navigation>
+    </div>
+  
 </header>
