--- a/src/app/routes/tools/passwdgen/passwdgen.component.less
+++ b/src/app/routes/tools/passwdgen/passwdgen.component.less
@@ -2,13 +2,21 @@ nz-card {
     z-index: 1;
     border-radius: 10px;
 }
-.description,h1,.conditions {
+h1,
+.description,
+.conditions,
+.button {
     text-align: center;
 }
-.length,.input-number {
+.length,
+.count,
+.input-number {
     position: relative;
     margin:auto;
     text-align: center;
     vertical-align: middle;
 }
-
+.button,
+.output {
+    margin-top: 10px;
+}
