--- a/src/app/layout/header/logo/logo.component.html
+++ b/src/app/layout/header/logo/logo.component.html
@@ -1,4 +1,4 @@
-<a href="/" id="logo">
+<a href="/" class="logo">
     <img width="32" height="28.27" alt="logo" src="../../../../assets/images/logo.svg" />
     <strong>WEBKCOM-SPACE</strong>
 </a>
